versioned_docs/version-3.1.1/HR Processes/Employment.md
---
id: p3-7-employment
sidebar_label: Employment
title: Employment
---

The **Employment** section allows HR to manage and view employee-related information, including staff details, profiles, and reporting structures.

The Employment tab provides access to all employee management features. It includes options to:

- View a list of all employees

- Access individual staff profiles

- Add or update employee information

### Staff List

The Staff List page provides a complete overview of all employees currently active in the organization. It helps HR quickly view employee details, check profile completion, and access individual staff profiles.

This page displays all active staff along with key information such as:

- Employee ID

- Name

- Department

- Designation

- Company Mail ID

- Profile Completion status

HR can also search, filter, and navigate through the staff records easily.

There is a  Separate tab to view details of resigned employees.

**View Profile** - HR can click this space to open the detailed Staff Profile page for that specific employee.

The detailed view includes personal information, contact details, reporting head, and other professional data.

### Staff Profile

The Employment Staff Profile page provides HR personnel with a comprehensive directory of all employees. This master list allows quick access to employee information and individual profile management.

**Key Features**

- Sortable columns for easy data organization
- Quick search by name or department
- Profile photos for visual identification
- Individual print functionality for employee profiles
- Multi-tab access to different information categories
- Bulk export capability for offline records
- Real-time data refresh

**Search and Filter Tools**

- Download Icon (⬇): Export employee list to Excel, PDF, or CSV
- Search by Name: Text field to locate employees by name
- Select Department: Dropdown to filter by specific department
- Search Button (🔍): Execute search query
- Refresh Button (↻): Reload page with updated data

### Add/Update Employee Detail

The **Add Employee** page allows the HR to create a new employee record in the system. This page helps capture all the necessary employment details and assign the appropriate reporting and approval hierarchy for the employee.

**The page is divided into two main sections** 

- Employment Details 
- Approval Details

**Employment Details**

In this section, the HR must enter the employee’s basic information.

Enter the Employee ID, followed by the Name of the employee. Select the Date of Joining from the date picker and choose the Location from the dropdown list.

Enter the Company Mail ID of the employee. Then, select the Department, Designation, and Sub Department if applicable.

Choose the appropriate Role to define the employee’s access level in the system. Finally, set a Password if required.

All fields marked with an asterisk (*) are mandatory and must be filled before saving the record.

**Approval Details**

The Approval Details section defines the approvers for Leave, Attendance, Appraisal, Travel, Hotel Booking, and Toggl activities.

For Leave & Attendance, select the Reporting Person and up to four Notification Persons to receive updates.
In Hotel Booking, choose the Approval Person and confirm their mail ID.
Under Appraisal, select the Evaluators, Recommendation Person, and Approval Person with their mail IDs.
In Travel Booking, select the Recommendation and Approval Persons for travel requests.
Finally, choose the Team Manager for Toggl time tracking.

After entering all the required information, click on the Create Account button to save the details and create the new employee account.

Make sure that all mandatory fields are filled in and the reporting structure is correctly defined before creating the account. Once the account is created, the employee’s information will appear in the Employee List tab.

**Employee List**

The Employee List page displays a complete list of all employees added to the system. HR can view each employee’s basic details such as Employee ID, Name, Department, Designation, Date of Joining, and Status.

A search option is provided at the top to quickly find an employee by Name or Department.

From this list, HR can select an employee to **edit or update** details. To make changes, click on the Edit icon next to the employee’s record. The system redirects to the Add Employee page where the HR can modify the necessary information and update the record.

The **Block** icon can be used to deactivate an employee if required.

## Automated Probation Completion Notifications  

The system now includes an automated notification feature that alerts relevant stakeholders when a trainee completes their probation period. This ensures timely review, confirmation, and necessary follow-up actions. 

The system automatically tracks the probation end date of trainees.  

Upon completion, email notifications are triggered without manual intervention.  

Notifications are sent to:  

- HR Team  

- Department Head (HOD)  

**How It Works** 

- Probation period details are configured during employee onboarding.  

- The system continuously monitors the probation timeline.  

- On the probation completion date, an automated email is sent to the concerned stakeholders.  

## WFH Eligibility upon User Creation

Work from Home eligibility is now automatically configured at the time of user creation, reducing manual setup and ensuring policy compliance from day one.  

**What’s New** 

- WFH eligibility is auto-assigned when a new user is created.  

- Removes the need for HR/Admins to manually enable or disable WFH access.  

- Ensures policy compliance from Day 1.  

- Reduces configuration errors and administrative effort. 

**How It Works** 

During user creation, the system evaluates predefined rules such as:  

- Role / designation  

- Department  

- Location / work policy  

Based on these criteria, the WFH Eligibility field is automatically set to:  

- Yes – User is eligible for WFH  

- No – User is not eligible 

## Access Control for Contractual Employees  

The system now includes role-based access control specifically designed for contractual employees. This ensures that users only see and access modules relevant to their role, improving security and usability. 

**Available Modules for Contractual Employees** 

When logged in as a contractual employee, the following options are available on the Home Page: 

- My Account – View and manage personal profile details  

- Leave – Apply for and track leave requests  

- Attendance – View attendance records and summaries  

- Toggl Track – Track work hours (if enabled)  

- Travel – Submit and manage travel requests  

- Hotel – Raise hotel accommodation requests  

  

 

 

 

 

 

 

 

 

 

 

